Added new features.

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 # .env
-DISCORD_TOKEN={Njg1ODk2OTYyODg0ODk0ODA2.XmPWhw.9OxeSs3dezYgh5Uduons5RfRvpM}
-# DISCORD_GUILD={guild-name}
+DISCORD_TOKEN=Njg1ODk2OTYyODg0ODk0ODA2.XmPgfQ.e2g4F0Tm7D6xlkedQbjJvzPP7wo
