--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # .env
-DISCORD_TOKEN=Njg1ODk2OTYyODg0ODk0ODA2.XmPgfQ.e2g4F0Tm7D6xlkedQbjJvzPP7wo
+DISCORD_TOKEN=Njg1ODk2OTYyODg0ODk0ODA2.XmPp3A.7MvZJdW8G3ZN6wy8GRT5THCZXac
