--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # .env
-DISCORD_TOKEN=Njg1ODk2OTYyODg0ODk0ODA2.XmPp3A.7MvZJdW8G3ZN6wy8GRT5THCZXac
+DISCORD_TOKEN=Njg1ODk2OTYyODg0ODk0ODA2.XmPuKQ.eQI0_O6398T7Jt9pw4zzfxJ_Kaw
