--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # .env
-DISCORD_TOKEN=Njg1ODk2OTYyODg0ODk0ODA2.XmPuKQ.eQI0_O6398T7Jt9pw4zzfxJ_Kaw
+DISCORD_TOKEN=Njg1ODk2OTYyODg0ODk0ODA2.XmPv5Q.lkz9LPP8QFvkVyGklZPGDTTTaQk
